--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@angular/compiler": "~9.1.9",
     "@angular/core": "~9.1.9",
     "@angular/forms": "~9.1.9",
+    "@angular/localize": "~9.1.9",
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
+    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "@types/elliptic": "^6.4.12",
+    "bootstrap": "^4.4.0",
     "elliptic": "^6.5.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
